--- a/src/css/elements/article.css
+++ b/src/css/elements/article.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *   ,
- * 7 |     background: $secondaryBackgroundColor;
- *   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
+ * 2 |     max-width: $width-content;
+ *   |                ^^^^^^^^^^^^^^
  *   '
- *   src/sass/elements/article.scss 7:17  root stylesheet */
+ *   src/sass/elements/article.scss 2:16  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 7 \2502      background: $secondaryBackgroundColor;\a   \2502                  ^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   src/sass/elements/article.scss 7:17  root stylesheet";
+  content: "Error: Undefined variable.\a   \2577 \a 2 \2502      max-width: $width-content;\a   \2502                 ^^^^^^^^^^^^^^\a   \2575 \a   src/sass/elements/article.scss 2:16  root stylesheet";
 }
