--- a/src/css/elements/header.css
+++ b/src/css/elements/header.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *    ,
- * 27 |     background: $backgroundColor;
- *    |                 ^^^^^^^^^^^^^^^^
+ * 15 |     padding-left: calc(#{$element-spacing} - 4px);
+ *    |                          ^^^^^^^^^^^^^^^^
  *    '
- *   src/sass/elements/header.scss 27:17  root stylesheet */
+ *   src/sass/elements/header.scss 15:26  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 27 \2502      background: $backgroundColor;\a    \2502                  ^^^^^^^^^^^^^^^^\a    \2575 \a   src/sass/elements/header.scss 27:17  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 15 \2502      padding-left: calc(#{$element-spacing} - 4px);\a    \2502                           ^^^^^^^^^^^^^^^^\a    \2575 \a   src/sass/elements/header.scss 15:26  root stylesheet";
 }
