Add basic styling for footer

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
 <footer>
-copyright and impressum
+    <div class="footer--wrap">copyright and impressum</div>
 </footer>
 <script  src="/js/main.min.js"></script>
 </body>
