--- a/src/css/all.css
+++ b/src/css/all.css
@@ -46,6 +46,7 @@
 body {
   font-family: "truenoultralight";
   background: var(--background);
+  margin-bottom: 0;
 }
 
 .light {
@@ -313,4 +314,18 @@ nav, .logo--sticky {
 }
 .mobile-nav--item:hover {
   background: darkgray;
+}
+
+footer {
+  width: var(--width-content);
+  margin: 0 auto;
+  background: var(--secondaryBackground);
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  min-height: 50px;
+}
+footer .footer--wrap {
+  width: 100%;
+  padding: 20px;
+  text-align: left;
 }
