--- a/src/css/elements/header.css
+++ b/src/css/elements/header.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
- *    ,
- * 15 |     padding-left: calc(#{$element-spacing} - 8px);
- *    |                          ^^^^^^^^^^^^^^^^
- *    '
- *   src/sass/elements/header.scss 15:26  root stylesheet */
+ *   ,
+ * 9 |     @media screen and (max-width: $mobile-break) {
+ *   |                                   ^^^^^^^^^^^^^
+ *   '
+ *   src/sass/elements/header.scss 9:35  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 15 \2502      padding-left: calc(#{$element-spacing} - 8px);\a    \2502                           ^^^^^^^^^^^^^^^^\a    \2575 \a   src/sass/elements/header.scss 15:26  root stylesheet";
+  content: "Error: Undefined variable.\a   \2577 \a 9 \2502      @media screen and (max-width: $mobile-break) {\a   \2502                                    ^^^^^^^^^^^^^\a   \2575 \a   src/sass/elements/header.scss 9:35  root stylesheet";
 }
