--- a/src/sass/elements/header.scss
+++ b/src/sass/elements/header.scss
@@ -6,16 +6,16 @@ nav, .logo--sticky {
     top: 0px;
     transition: all 0.3s;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: $mobile-break) {
         position: initial;
     }
 }
 .logo--sticky {
     z-index: 10;
-    padding-left: calc(#{$element-spacing} - 8px);
+    padding-left: calc(#{$element-spacing} - #{$logo-spacing});
 }
 .logo, .logo--sticky {
-    height: 50px;
+    height: 60px;
     padding-top: 13px;
 
 }
@@ -23,14 +23,14 @@ nav, .logo--sticky {
     margin-left: -5px
 }
 .nav {
-    padding:  19px 0 0 0;
+    padding:  21px 0 0 0;
     margin: 0 auto;
     max-width: $width-content;
     display: flex;
     position: relative;
     background: $backgroundColor;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: $mobile-break) {
         display: none;
     }
 
@@ -70,11 +70,11 @@ nav, .logo--sticky {
         margin-left: 0;
         padding-right: 5px;
         border-radius: 50px;
-        height:50px;
-        width:24px;
+        height:59px;
+        width:60px;
         z-index: 5;
         position: absolute;
-        top: 5px;
+        top: 7px;
         left: -3px;
         opacity: 0;
         transition: all 0.2s;
@@ -82,7 +82,7 @@ nav, .logo--sticky {
     & li:nth-child(2) {
         background: #cfff99;
         z-index: 4;
-        margin-left: 35px;
+        margin-left: 25px;
         border-radius: 25px;
     }        
     & li:nth-child(3) {
@@ -118,7 +118,7 @@ nav, .logo--sticky {
         z-index: 1;
         display: none;
 
-        @media screen and (max-width: 900px) {
+        @media screen and (max-width: $mobile-break) {
             display: block;
         }
     }
