--- a/src/css/all.css
+++ b/src/css/all.css
@@ -33,7 +33,7 @@
   :root {
     --width-content: 80vw;
     --element-spacing: 10vw;
-    --logo-spacing: 4px;
+    --logo-spacing: 0px;
     --min-width: 100%;
   }
 }
@@ -213,11 +213,10 @@ nav, .logo--sticky {
 
 .nav {
   padding: 21px 0 0 0;
-  margin: 0 auto;
+  margin: 0 var(--element-spacing);
   max-width: var(--width-content);
   display: flex;
   position: relative;
-  background: var(--background);
 }
 @media screen and (max-width: 800px) {
   .nav {
@@ -263,7 +262,7 @@ nav, .logo--sticky {
   z-index: 5;
   position: absolute;
   top: 7px;
-  left: -3px;
+  left: -6px;
   opacity: 0;
   transition: all 0.2s;
 }
