--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -4,7 +4,7 @@
 <img src="/img/o_only_white.svg" alt="Overte Logo" class="logo--sticky dark"><img src="/img/verte_only_white.svg" alt="Overte Logo" class="logo dark">
 {% include "partials/navigation.njk" %}
 <main>
-
+    {% include "partials/gallery-top.njk" %}
     {%- for contentBlock in collections.contentBlock | sortByOrder -%}
     <article class="section">
         <a id="{{ contentBlock.data.navUrl }}" class="nav--anchor"></a>
