--- a/src/css/all.css
+++ b/src/css/all.css
@@ -182,6 +182,17 @@ main {
   width: 200px;
 }
 
+.gallery-top {
+  width: 100%;
+  border-radius: 25px;
+  overflow: hidden;
+  max-height: 500px;
+}
+.gallery-top img {
+  width: 100%;
+  object-fit: cover;
+}
+
 #logo-dot.is--visible {
   opacity: 1;
 }
