--- a/src/css/all.css
+++ b/src/css/all.css
@@ -100,6 +100,9 @@ body {
   font-family: "truenoultralight";
   background: var(--background);
   margin-bottom: 0;
+  background: url("/img/blur_light.jpg") var(--background);
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .light {
@@ -111,6 +114,12 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
+  body {
+    background: url("/img/blur_dark.jpg") var(--background);
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
   .light {
     display: none;
   }
