--- a/src/sass/elements/article.scss
+++ b/src/sass/elements/article.scss
@@ -11,10 +11,11 @@ main {
     z-index: -1;
     border-radius: 25px;
     overflow: hidden;
+    box-shadow: 5px 0px 6px 0px rgba(0,0,0,.75);
 
     & .nav--anchor {
         position: relative;
-        top: -150px;
+        top: -120px;
 
         @media screen and (max-width: $mobile-break) {
             top: -50px;
