--- a/src/sass/elements/footer.scss
+++ b/src/sass/elements/footer.scss
@@ -5,6 +5,7 @@ footer {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     min-height: 50px;
+    box-shadow: 5px 0px 6px 0px rgba(0,0,0,.75);
 
     .footer {
         &--wrap {
