--- a/src/_includes/news-post.njk
+++ b/src/_includes/news-post.njk
@@ -4,15 +4,10 @@
 <img src="/img/o_only_white.svg" alt="Overte Logo" class="logo--sticky dark"><img src="/img/verte_only_white.svg" alt="Overte Logo" class="logo dark">
 {% include "partials/navigation.njk" %}
 <main>
-    {% include "partials/gallery-top.njk" %}
-    {% include "partials/news.njk" %}
-    {%- for contentBlock in collections.contentBlock | sortByOrder -%}
     <article class="section">
-        <a id="{{ contentBlock.data.navUrl }}" class="nav--anchor"></a>
-        <h2>{{ contentBlock.data.title }}</h2>
-        {{ contentBlock.data.content | safe }}
+        <h1>{{ title }}</h1>
+        {{ content | safe }}
     </article>
-    {%- endfor -%}
 </main>
 {% endblock %}
 {% include "partials/footer.njk" %}
