--- a/src/css/all.css
+++ b/src/css/all.css
@@ -96,6 +96,12 @@ input {
   border-radius: 0;
 }
 
+html {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 70px;
+}
+
 body {
   font-family: "truenoultralight";
   background: var(--background);
@@ -139,7 +145,6 @@ main {
   padding: 60px 20px 20px 20px;
   margin: 30px 0 20px 0;
   position: relative;
-  z-index: -1;
   border-radius: 25px;
   overflow: hidden;
   box-shadow: 5px 0px 6px 0px rgba(0, 0, 0, 0.75);
@@ -205,6 +210,10 @@ main {
   object-fit: cover;
 }
 
+.news--post h2 {
+  position: initial;
+}
+
 #logo-dot.is--visible {
   opacity: 1;
 }
@@ -232,6 +241,10 @@ nav, .logo--sticky {
 
 .logo {
   margin-left: -5px;
+}
+
+nav {
+  z-index: 2;
 }
 
 .nav {
@@ -401,6 +414,9 @@ footer {
   border-top-right-radius: 25px;
   min-height: 50px;
   box-shadow: 5px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  position: absolute;
+  bottom: 0px;
+  left: calc(50% - var(--width-content) / 2);
 }
 footer .footer--wrap {
   width: 100%;
