--- a/src/css/elements/news.css
+++ b/src/css/elements/news.css
@@ -1,3 +1,17 @@
-.news--post h2 {
-  position: initial;
+/* Error: Undefined variable.
+ *    ,
+ * 17 |             color: $textColor;
+ *    |                    ^^^^^^^^^^
+ *    '
+ *   src/sass/elements/news.scss 17:20  root stylesheet */
+
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 17 \2502              color: $textColor;\a    \2502                     ^^^^^^^^^^\a    \2575 \a   src/sass/elements/news.scss 17:20  root stylesheet";
 }
