--- a/src/css/variables/colors.css
+++ b/src/css/variables/colors.css
@@ -2,6 +2,7 @@
   --background: #dfdfdf;
   --secondaryBackground: #cacaca;
   --text: #292929;
+  --link: #b60202;
   --navText: #292929;
   --mobileNavText: #dfdfdf;
   --hover: #7f7e7e;
@@ -11,7 +12,8 @@
   :root {
     --background: #292929;
     --secondaryBackground: #aaaaaa;
-    --text: #dfdfdf;
+    --text: #292929;
+    --link: #b60202;
     --navText: #2b2b2b;
     --hover: #7f7e7e;
   }
