--- a/src/sass/general/various.scss
+++ b/src/sass/general/various.scss
@@ -2,6 +2,7 @@ html {
     position: relative;
     min-height: 100vh;
     padding-bottom: 70px;
+    font-size: 18px;
 }
 body {
     font-family: $truUltra;
