--- a/src/css/all.css
+++ b/src/css/all.css
@@ -1,5 +1,6 @@
 :root {
   --background: #dfdfdf;
+  --backgroundLight: #c7c7c7;
   --secondaryBackground: #cacaca;
   --text: #292929;
   --link: #b60202;
@@ -11,6 +12,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #292929;
+    --backgroundLight: #949494;
     --secondaryBackground: #aaaaaa;
     --text: #292929;
     --link: #b60202;
@@ -213,9 +215,6 @@ main {
   object-fit: cover;
 }
 
-.news p {
-  margin-bottom: 10px;
-}
 .news--post {
   margin-bottom: 20px;
 }
@@ -232,6 +231,13 @@ main {
 }
 .news--content {
   display: flex;
+  background: var(--backgroundLight);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  overflow: hidden;
+}
+.news--content p {
+  margin-bottom: 10px;
 }
 .news--content-image {
   max-width: 15%;
@@ -239,13 +245,16 @@ main {
 }
 .news--content-image img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .news--content-summary {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
 }
-.news--read-more {
+.news--content .news--read-more {
   color: var(--link);
   text-decoration: underline;
+  margin-bottom: 0;
 }
 
 #logo-dot.is--visible {
