--- a/src/sass/elements/news.scss
+++ b/src/sass/elements/news.scss
@@ -1,7 +1,4 @@
 .news {
-    p {
-        margin-bottom: 10px;
-    }
     &--post {
         margin-bottom: 20px;
 
@@ -19,21 +16,31 @@
     }
     &--content {
         display: flex;
+        background: $backgroundLight;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        overflow: hidden;
 
+        p {
+            margin-bottom: 10px;
+        }
         &-image {
             max-width: 15%;
             min-width: 90px;
 
             img {
                 width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
         &-summary {
-            padding: 20px;
+            padding: 20px 20px 0 20px;
         }
-    }
-    &--read-more {
-        color: $link;
-        text-decoration: underline;
+        .news--read-more {
+            color: $link;
+            text-decoration: underline;
+            margin-bottom: 0;
+        }
     }
 }
