--- a/src/css/all.css
+++ b/src/css/all.css
@@ -179,6 +179,13 @@ main {
   border-bottom-right-radius: 25px;
   font-size: 130%;
 }
+.section ul {
+  list-style: disc;
+}
+.section ul li {
+  margin-left: 18px;
+  padding-bottom: 20px;
+}
 
 .teaser {
   display: flex;
