Added draft mode, added various styling, various fixes to navigation

--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -6,11 +6,13 @@
 <main>
     {% include "partials/gallery-top.njk" %}
     {%- for contentBlock in collections.contentBlock | sortByOrder -%}
-    <article class="section">
+    {%- if contentBlock.data.draft != true -%}
+    <article class="section {{ contentBlock.data.navUrl }}">
         <a id="{{ contentBlock.data.navUrl }}" class="nav--anchor"></a>
         <h2>{{ contentBlock.data.title }}</h2>
         {{ contentBlock.data.content | safe }}
     </article>
+    {%- endif -%}
     {%- endfor -%}
 </main>
 {% endblock %}
