--- a/src/sass/elements/news.scss
+++ b/src/sass/elements/news.scss
@@ -35,7 +35,7 @@
             }
         }
         &-summary {
-            padding: 20px 20px 0 20px;
+            padding: 20px;
         }
         .news--read-more {
             color: $link;
