--- a/src/sass/elements/header.scss
+++ b/src/sass/elements/header.scss
@@ -1,6 +1,3 @@
-#logo-dot.is--visible {
-    opacity: 1;
-}
 nav, .logo--sticky {
     position: sticky;
     top: 0px;
@@ -36,33 +33,7 @@ nav {
         display: none;
     }
 
-    & a {
-        text-decoration: none;
-        color: $navigationTextColor;
-
-        &:hover {
-            color: $navigationTextColor;
-        }
-    }
-
-    & li {
-        padding: 8px;
-        padding-left: 35px;
-        padding-right: 25px;
-        border-top-right-radius: 25px;
-        border-bottom-right-radius: 25px;
-        box-shadow: 3px -1px 6px -1px rgba(0,0,0,0.75);
-        transition: all 0.3s;
-        font-family: $truLight;
-    }
-    & li:hover { 
-        box-shadow: 5px -1px 6px -1px rgba(0,0,0,0.75);
-        cursor: pointer;
-    }
-    & li {
-        margin-left: -25px;
-    }
-    & li:nth-child(1) {
+    & #logo-dot {
         background: #000000;
         margin-left: 0;
         padding-right: 5px;
@@ -75,45 +46,76 @@ nav {
         left: -6px;
         opacity: 0;
         transition: all 0.2s;
+
+        &.is--visible {
+            opacity: 1;
+        }
     }
-    & li:nth-child(2) {
-        background: #ffc799;
-        z-index: 5;
-        margin-left: 25px;
-        border-radius: 25px;
+    & a {
+        text-decoration: none;
+        color: $navigationTextColor;
 
         &:hover {
-            background: #fcddc3;
+            color: $navigationTextColor;
         }
-    }        
-    & li:nth-child(3) {
-        background: #cfff99;
-        z-index: 4;
 
-        &:hover {
-            background: #e1fcc2;
+        & {
+            padding: 8px;
+            padding-left: 35px;
+            padding-right: 25px;
+            border-top-right-radius: 25px;
+            border-bottom-right-radius: 25px;
+            box-shadow: 3px -1px 6px -1px rgba(0,0,0,0.75);
+            transition: all 0.3s;
+            font-family: $truLight;
         }
-    }        
-    & li:nth-child(4) {
-        background: #99fff6;
-        z-index: 3;
+        &:hover { 
+            box-shadow: 5px -1px 6px -1px rgba(0,0,0,0.75);
+            cursor: pointer;
+        }
+        & {
+            margin-left: -25px;
+        }
+        &:nth-child(2) {
+            background: #ffc799;
+            z-index: 5;
+            margin-left: 25px;
+            border-radius: 25px;
 
-        &:hover {
-            background: #bcfcf6;
+            &:hover {
+                background: #fcddc3;
+            }
+        }        
+        &:nth-child(3) {
+            background: #cfff99;
+            z-index: 4;
+
+            &:hover {
+                background: #e1fcc2;
+            }
+        }        
+        &:nth-child(4) {
+            background: #99fff6;
+            z-index: 3;
+
+            &:hover {
+                background: #bcfcf6;
+            }
+        }        
+        &:nth-child(5) {
+            background: #c099ff;
+            z-index: 2;
+        }        
+        &:nth-child(6) {
+            background: #f399ff;
+            z-index: 1;
+        }        
+        &:nth-child(7) {
+            background: #ff99c4;
+            z-index: 0;
         }
-    }        
-    & li:nth-child(5) {
-        background: #c099ff;
-        z-index: 2;
-    }        
-    & li:nth-child(6) {
-        background: #f399ff;
-        z-index: 1;
-    }        
-    & li:nth-child(7) {
-        background: #ff99c4;
-        z-index: 0;
     }
+
 }
 .mobile-nav {
     z-index: 99999;
