--- a/src/_includes/partials/gallery-top.njk
+++ b/src/_includes/partials/gallery-top.njk
@@ -1,3 +1,3 @@
 <div class="gallery-top">
-    <img src="/img/screenshots/screenshot_1.png" alt="Screenshot 1">
+    <img src="/img/screenshot_1.jpeg" alt="Screenshot 1">
 </div>
