Changed warning content and stlying

--- a/src/css/all.css
+++ b/src/css/all.css
@@ -176,6 +176,7 @@ body {
   padding: 40px 20px 20px 20px;
   border: 1px solid var(--text);
   width: max-content;
+  margin-bottom: 20px;
 }
 .warning:before {
   content: "!";
