--- a/src/sass/general/various.scss
+++ b/src/sass/general/various.scss
@@ -68,6 +68,7 @@ body {
     padding: 40px 20px 20px 20px;
     border: 1px solid $textColor;
     width: max-content;
+    margin-bottom: 20px;
 
     &:before {
         content: "!";
