Hopefully fix all the links for staging

--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -3,7 +3,7 @@
         <li id="logo-dot"></li>
         {%- for contentBlock in collections.contentBlock | sortByOrder -%}
         {%- if contentBlock.data.draft != true -%}
-        <a href="/#{{ contentBlock.data.navUrl }}">
+        <a href="{{ '/#'+contentBlock.data.navUrl | url }}">
                 <div class="nav--text">{{ contentBlock.data.title }}</div>
         </a>
         {%- endif -%}
@@ -17,7 +17,7 @@
             <ul>
                 {%- for contentBlock in collections.contentBlock | sortByOrder -%}
                 {%- if contentBlock.data.draft != true -%}
-                <a href="/#{{ contentBlock.data.navUrl }}" class="mobile-nav--text">
+                <a href="{{ '/#'+contentBlock.data.navUrl | url }}" class="mobile-nav--text">
                     <li class="mobile-nav--item">
                         <div>{{ contentBlock.data.title }}</div>
                     </li>
