Actually fix nav

--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -4,7 +4,7 @@
         <li id="logo-dot"></li>
         {%- for contentBlock in collections.contentBlock | sortByOrder -%}
         {%- if contentBlock.data.draft != true -%}
-        <a href="{% rootPath %}#{{contentBlock.data.navUrl}}">
+        <a href="{{'/' | url }}#{{contentBlock.data.navUrl}}">
                 <div class="nav--text">{{ contentBlock.data.title }}</div>
         </a>
         {%- endif -%}
@@ -18,7 +18,7 @@
             <ul>
                 {%- for contentBlock in collections.contentBlock | sortByOrder -%}
                 {%- if contentBlock.data.draft != true -%}
-                <a href="{% rootPath %}#{{contentBlock.data.navUrl}}" class="mobile-nav--text">
+                <a href="{{'/' | url }}#{{contentBlock.data.navUrl}}" class="mobile-nav--text">
                     <li class="mobile-nav--item">
                         <div>{{ contentBlock.data.title }}</div>
                     </li>
