--- a/src/sass/general/various.scss
+++ b/src/sass/general/various.scss
@@ -7,7 +7,7 @@ html {
 }
 body {
     font-family: $truUltra;
-    background: $backgroundColor;
+    background-color: $backgroundColor;
     margin-bottom: 0;
     background-attachment: fixed;
     background-size: cover;
