first draft of legal sites

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,8 @@
 <footer>
-    <div class="footer--wrap">copyright and impressum</div>
+    <div class="footer--wrap">
+        <a href="/legal/imprint">copyright and imprint</a>
+        <a href="/legal/privacy">privacy policy</a>
+    </div>
 </footer>
 <script  src="/js/main.min.js"></script>
 </body>
