Fix links in footer

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer--wrap">
-        <a href="/legal/imprint">copyright and imprint</a>
-        <a href="/legal/privacy">privacy policy</a>
+        <a href="{{'/legal/imprint' | url }}">copyright and imprint</a>
+        <a href="{{'/legal/privacy' | url }}">privacy policy</a>
     </div>
 </footer>
 <script  src="/js/main.min.js"></script>
